2019-02-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve appearance on Ubuntu 16.04 (fix missing icon on edit register button and disable vertically linked buttons for incompatible themes)

2019-02-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix initial keyboard shortcuts on first run

2019-02-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix initial window title (use "Qalculate!" instead of "qalculate-gtk")

2019-02-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Floating point conversion dialog

2019-02-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to enable/disable new version notification

2019-02-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* binary16/fp16, binary32/fp32/float, binary64/fp64/double, and binary128/fp128 "to" conversion
	* Support specification of number of bits for binary "to" conversion (4 to bin16 = 0000 0000 0000 0100)

2019-01-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Configurable keyboard shortcuts

2019-12-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add base units (or local currency) to expression when "to"-expression specifies unit conversion and original expression does not include any units

2019-12-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Clear expression entry when escape key is pressed

2019-11-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not automatically recalculate expressions with answer variables when calculation/parsing mode has changed

2019-11-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Options to customize the window title - different modes selectable in preferences, command line option, and settitle() function

2019-11-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to select custom application font

2019-11-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix automatic use quotation marks for text arguments in input function dialog
	* Option to select custom keypad font
