@@ -1,3 +1,7 @@
+2019-03-10 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Optional (at compile time; default off) internal help viewer using WebKitGTK
+
 2019-02-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Improve appearance on Ubuntu 16.04 (fix missing icon on edit register button and disable vertically linked buttons for incompatible themes)
